--- a/conf/permissions.yaml
+++ b/conf/permissions.yaml
@@ -7,11 +7,29 @@ Course:
   getCourses:
   getCourse:
   updateCourse:
-    check_permission : true
     admin_required: true
   addCourse:
-    check_permission : true
     admin_required: true
   deleteCourse:
-    check_permission : true
     admin_required: true
+User:
+  getGlobalUsers:
+    admin_required: true
+  getGlobalUser:
+    admin_required: true
+  updateGlobalUser:
+    admin_required: true
+  addGlobalUser:
+    admin_required: true
+  deleteGlobalUser:
+    admin_required: true
+  getUsers:
+    allowed_users: ["admin","instructor"]
+  getUser:
+    allowed_users: ["admin","instructor"]
+  addUser:
+    allowed_users: ["admin","instructor"]
+  updateUser:
+    allowed_users: ["admin","instructor"]
+  deleteUsers:
+    allowed_users: ["admin","instructor"]
