--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -6,6 +6,11 @@
 ###########################
 name: Lint Code Base
 
+defaults:
+  run:
+    shell: bash
+    working-directory: scripts
+
 #
 # Documentation:
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
@@ -17,7 +22,7 @@ name: Lint Code Base
 on:
   push:
     branches-ignore: [main]
-    # Remove the line above to run when pushing to master
+    # Remove the line above to run when pushing to main
   pull_request:
     branches: [main]
 
@@ -48,8 +53,15 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: github/super-linter@v3  
+        uses: github/super-linter@v3
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ################################
+      # Run Linter against code base #
+      ################################
+      - name: Run Perl Tests
+        uses: skx/github-action-tester@master
+        with:
+          script: .github/run-perl-tests.sh
