--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,8 +52,9 @@ jobs:
       ################################
       # Run Linter against code base #
       ################################
-      - name: Lint Code Base
-        uses: github/super-linter@v4
+      - name: Super-Linter
+        uses: github/super-linter@v4.2.2
+
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
