fix for github action.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   coverage:
+    runs-on: ubuntu-latest
     container: pstaabp/webwork3
     steps:
       - uses: actions/checkout@v2
