--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-# comment
+# comment 2
 jobs:
   coverage:
     runs-on: ubuntu-latest
