--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,4 +23,6 @@ jobs:
           name: coverage-report
           path: cover_db/
       - name: push coverage analysis
+        env:
+          CODECOV_TOKEN: ${{ secrets.WEBWORK3_CODECOV_TOKEN }}
         run: cover -report codecov
