More updates on adding a course

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@quasar/app/tsconfig-preset",
+	"extends": "@quasar/app/tsconfig-preset.json",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
