--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"core-js": "^3.6.5",
 		"quasar": "^2.0.0",
 		"stylelint-config-prettier": "^8.0.2",
-		"vue": "^3.1.0",
+		"vue": "^3.2.0",
+		"vue-router": "^4.0.11",
 		"vuex": "^4.0.1",
 		"vuex-persistedstate": "^4.0.0"
 	},
@@ -27,6 +28,7 @@
 		"@types/node": "^10.17.15",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
+		"@vue/compiler-sfc": "^3.2.0",
 		"eslint": "^7.14.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-vue": "^7.0.0",
