--- a/package.json
+++ b/package.json
@@ -12,27 +12,25 @@
 		"build": "quasar build"
 	},
 	"dependencies": {
-		"@quasar/extras": "^1.0.0",
+		"@quasar/extras": "^1.10.10",
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
 		"quasar": "^2.0.0",
-		"stylelint-config-prettier": "^8.0.2",
-		"vue": "^3.1.0",
-		"vue-router": "^4.0.11",
+		"vue-router": "4.0.10",
 		"vuex": "^4.0.1",
 		"vuex-persistedstate": "^4.0.0"
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
-		"@quasar/app": "^3.0.4",
+		"@quasar/app": "^3.0.0",
 		"@types/node": "^10.17.15",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
-		"@vue/compiler-sfc": "^3.2.0",
 		"eslint": "^7.14.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-vue": "^7.0.0",
 		"stylelint": "^13.13.1",
+		"stylelint-config-prettier": "^8.0.2",
 		"stylelint-config-recommended-scss": "^4.3.0",
 		"stylelint-config-standard": "^22.0.0",
 		"stylelint-scss": "^3.20.1",
