--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@quasar/extras": "^1.10.10",
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
+		"lodash-es": "^4.17.21",
 		"quasar": "^2.0.0",
 		"vue-router": "4.0.10",
 		"vuex": "^4.0.1",
@@ -23,6 +24,7 @@
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
 		"@quasar/app": "^3.0.0",
+		"@types/lodash-es": "^4.17.4",
 		"@types/node": "^10.17.15",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
