Fix the database to work with an actual database management system like mysql or mariadb.  There were two problems that made the database code fail with those systems.  First, columns of type text can not be part of a primary key or index.  So those columns were switched to varchar type. Second, the JSON columns were not correctly coded.  That could have been fixed, but the DBIx::Class::InflateColumn::Serializer::JSON package handles this nicely, so that was used.  On Ubuntu you can install the package libdbix-class-inflatecolumn-serializer-perl.
Also restrucure the database settings in the webwork3.dist.yml file a
bit.  There is no need to distinguish the cases for sqlite, mariadb, or
mysql, and so a `database` config variable is not needed.  Just set the
`database_dsn`.  The `database_user` and `database_password` variables
are ignored if sqlite is used.

Also, the build_db.pl file was made executable for convenience.

Note that the docker image (drgrice1/webwork3) used by the unit test
workflow has been updated for these changes.  The updated
docker/webwork3.dockerfile file that was used for this build is included
in this pull request.

--- a/conf/webwork3.dist.yml
+++ b/conf/webwork3.dist.yml
@@ -3,15 +3,18 @@ secrets:
   - 3cdf63327fcf77deaed1d200df4b9fee66af2326
 webwork3_home: /opt/webwork/webwork3
 
-# if ignore_permissions is set to true, all routes can be executed
-# this should only be used in development
+# If ignore_permissions is set to true, all routes can be executed.
+# This should only be used in development.
 ignore_permissions: true
 
-# sqlite database
-sqlite_dsn: dbi:SQLite:/opt/webwork/webwork3/t/db/sample_db.sqlite
-# mysql or mariadb setup
-mariadb_dsn: dbi:mysql:test_webwork3:localhost:3306
+# Database settings
+
+# For the sqlite database
+database_dsn: dbi:SQLite:/opt/webwork/webwork3/t/db/sample_db.sqlite
+# For mysql or mariadb
+#database_dsn: dbi:mysql:dbname=webwork3
+
+# Database credentials for mysql or mariadb.
+# These are ignored if the 'sqlite' database is used.
 database_user: webworkWrite
 database_password: password
-# determine which database to use
-database: sqlite
