develop a problem viewer using the standalone renderer.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
 		"lodash-es": "^4.17.21",
+		"mathjax-full": "^3.2.0",
 		"quasar": "^2.0.4",
 		"vue-i18n": "^9.1.7",
 		"vue-router": "4.0.11",
