--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
 		"lodash-es": "^4.17.21",
+		"papaparse": "^5.3.1",
 		"quasar": "^2.0.4",
 		"vue-i18n": "^9.1.7",
 		"vue-router": "4.0.11",
@@ -27,6 +28,7 @@
 		"@quasar/app": "^3.1.0",
 		"@types/lodash-es": "^4.17.4",
 		"@types/node": "^10.17.15",
+		"@types/papaparse": "^5.2.6",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
 		"eslint": "^7.14.0",
