--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,6 @@
 	"extends": "@quasar/app/tsconfig-preset.json",
 	"compilerOptions": {
 		"baseUrl": "."
-	}
+	},
+	"exclude": ["dist", ".quasar", "node_modules"]
 }
