--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	},
 	"dependencies": {
 		"@quasar/extras": "^1.10.12",
+		"@types/jquery": "^3.5.6",
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
+		"jquery": "^3.6.0",
 		"lodash-es": "^4.17.21",
-		"mathjax-full": "^3.2.0",
+		"mathjax": "^3.2.0",
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"quasar": "^2.0.4",
 		"setimmediate": "^1.0.5",
