--- a/.perltidyrc
+++ b/.perltidyrc
@@ -1,16 +1,10 @@
 # PBP .perltidyrc file
-# Uncomment #-st to fully emulate perltidy -pbp
-
--l=120   # Max line width is 120 cols
+-l=120  # Max line width is 120 cols
 -et=4   # Use tabs instead of spaces.
 -i=4    # Indent level is 4 cols
 -ci=4   # Continuation indent is 4 cols
-
-#-st     # Output to STDOUT
 -b      # Write the file inline and create a .bak file
--se     # Errors to STDERR
-
--vt=2   # Maximal vertical tightness
+-vt=0   # Minimal vertical tightness
 -cti=0  # No extra indentation for closing brackets
 -pt=2   # Maximum parenthesis tightness
 -bt=1   # Medium brace tightness
@@ -22,3 +16,6 @@
 -ce     # Cuddled else
 -cb     # Cuddled blocks
 -nbbc   # Do not add blank lines before full length comments
+-nbot   # No line break on ternary
+-nlop   # No logical padding (this causes mixed tabs and spaces)
+-wn     # Weld nested containers
