--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
 		"core-js": "^3.6.5",
 		"lodash-es": "^4.17.21",
 		"mathjax-full": "^3.2.0",
+		"node-polyfill-webpack-plugin": "^1.1.4",
 		"quasar": "^2.0.4",
+		"setimmediate": "^1.0.5",
 		"vue-i18n": "^9.1.7",
 		"vue-router": "4.0.11",
 		"vuex": "^4.0.1",
-		"vuex-persistedstate": "^4.0.0"
+		"vuex-persistedstate": "^4.0.0",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
