--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"eslint": "^7.14.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-vue": "^7.0.0",
+		"jest": "^27.2.2",
 		"stylelint": "^13.13.1",
 		"stylelint-config-prettier": "^8.0.2",
 		"stylelint-config-recommended-scss": "^4.3.0",
