--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"private": true,
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.vue ./src --fix && stylelint \"./src/**/*.vue\" \"./src/**/*.scss\" --fix",
-		"test": "echo \"No test specified\" && exit 0",
+		"test": "jest",
 		"serve": "morbo bin/webwork3 & quasar dev",
 		"build": "quasar build"
 	},
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
 		"@quasar/app": "^3.1.0",
+		"@types/jest": "^27.0.2",
 		"@types/lodash-es": "^4.17.4",
 		"@types/node": "^10.17.15",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -39,7 +40,8 @@
 		"stylelint-config-recommended-scss": "^4.3.0",
 		"stylelint-config-standard": "^22.0.0",
 		"stylelint-scss": "^3.20.1",
-		"stylelint-webpack-plugin": "^3.0.1"
+		"stylelint-webpack-plugin": "^3.0.1",
+		"ts-jest": "^27.0.5"
 	},
 	"browserslist": [
 		"last 10 Chrome versions",
@@ -56,5 +58,8 @@
 		"node": ">= 12.22.1",
 		"npm": ">= 6.13.4",
 		"yarn": ">= 1.21.1"
-	}
+	},
+	"_moduleAliases": {
+    "@": "src"
+  }
 }
