Allow the '@' in file paths.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["src/*"]
+			"@/*": ["src/*"],
+			"boot/*": ["src/boot/*"]
 		}
 	},
 	"exclude": ["dist", ".quasar", "node_modules"]
