Update the internationalization setup.
Add configuration options to the app i18n object to make it work with
the vue composition api.  Also add a fallback locale.

Lazy load the locales from yaml files.  We really don't want to load all
languages by default.

Make the language selector show the language names instead of the
iso language code.  Note that the displayed language name is always in
its own language regardless of the selected language.  This is how it
should be.

Finally, add a few more translations.

--- a/conf/course_defaults.yml
+++ b/conf/course_defaults.yml
@@ -29,28 +29,32 @@
   category: general
   doc: Default language for the course
   doc2: >
-    WeBWorK currently has translations for four languages: "English en", "Turkish tr", "Spanish es", and "French fr"
+    WeBWorK currently has translations for the following languages:
+      "English en", "French fr", and "German de"
   type: list
   options:
     -
-      label: English
-      value: en-us
+      label: English (US)
+      value: en-US
     -
-      label: Turkish
-      value: tr
+      label: Deutsch
+      value: de
     -
-      label: Spanish
-      value: es
-    -
-      label: French
+      label: français
       value: fr
-    -
-      label: Chinese (Hong Kong)
-      value: zh_hk
-    -
-      label: Hebrew
-      value: he
-  default: en-us  # select default value here
+    #-
+    #  label: Chinese (Hong Kong)
+    #  value: zh_hk
+    #-
+    #  label: Hebrew
+    #  value: he
+    #-
+    #  label: Spanish
+    #  value: es
+    #-
+    #  label: Turkish
+    #  value: tr
+  default: en-US  # select default value here
 -
   var: per_problem_lang_and_dir_setting_mode
   category: general
