--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,7 +2,7 @@ name: Unit Tests and Coverage
 
 on:
   push:
-    # branches: [ main ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
