--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -59,7 +59,7 @@ jobs:
         # Note that this actually uses super-linter version 4.6.0 which is the desired version.
         # See https://github.com/github/super-linter/issues/1839.
         # It seems that version 4.6.1 has a bug with perlcritic, so we actually want 4.6.0.
-        uses: github/super-linter@v4.6.1
+        uses: github/super-linter@v4.8.1
 
         env:
           VALIDATE_ALL_CODEBASE: false
@@ -72,7 +72,7 @@ jobs:
           CSS_FILE_NAME: .stylelintrc.js
           VALIDATE_TYPESCRIPT_STANDARD: false
           VALIDATE_JAVASCRIPT_STANDARD: false
-          FILTER_REGEX_EXCLUDE: .*/we_b_wor_k3.yml,t/**/*.csv
+          FILTER_REGEX_EXCLUDE: (.*/we_b_wor_k3.yml)|(t/**/*.csv)
 
   perltidy:
     name: Run perltidy on Perl Files
