switching the testing framework to a separate database

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,6 +18,7 @@ jobs:
           HARNESS_PERL_SWITCHES: -MDevel::Cover
         run: |
           sed 's/\/opt\/webwork\//\/__w\/webwork3\//g' conf/webwork3.dist.yml > conf/webwork3.yml
+          sed 's/\/opt\/webwork\//\/__w\/webwork3\//g' conf/ww3-dev.dist.yml > conf/ww3-dev.yml
           perl t/db/build_db.pl
           prove -r t
 
