--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"quasar": "^2.2.2",
 		"setimmediate": "^1.0.5",
 		"vue-i18n": "^9.1.7",
-		"vue-router": "4.0.11",
+		"vue-router": "^4.0.12",
 		"vuex": "^4.0.1",
 		"vuex-persistedstate": "^4.0.0",
 		"winston": "^3.3.3"
