--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "quasar build"
 	},
 	"dependencies": {
-		"@quasar/extras": "^1.11.3",
+		"@quasar/extras": "^1.11.4",
 		"@types/bootstrap": "^5.1.4",
 		"@types/jquery": "^3.5.6",
 		"axios": "^0.21.1",
@@ -23,8 +23,9 @@
 		"mathjax": "^3.2.0",
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"papaparse": "^5.3.1",
-		"quasar": "^2.2.2",
+		"quasar": "^2.2.3",
 		"setimmediate": "^1.0.5",
+		"vue-draggable-next": "^2.1.1",
 		"vue-i18n": "^9.1.7",
 		"vuex": "^4.0.1",
 		"vuex-persistedstate": "^4.0.0",
@@ -32,7 +33,7 @@
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
-		"@quasar/app": "^3.1.8",
+		"@quasar/app": "^3.1.9",
 		"@types/jest": "^27.0.2",
 		"@types/lodash-es": "^4.17.4",
 		"@types/node": "^10.17.15",
