Add support for postgres.  Due to the table name `user` which is a postgres reserved word, names need to be quoted.

--- a/conf/webwork3.dist.yml
+++ b/conf/webwork3.dist.yml
@@ -9,8 +9,10 @@ webwork3_home: .
 database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # For mysql or mariadb
 #database_dsn: dbi:mysql:dbname=webwork3
+# For postgres
+#database_dsn: dbi:Pg:dbname=webwork3;host=localhost
 
-# Database credentials for mysql or mariadb.
+# Database credentials for mysql, mariadb, or postgres.
 # These are ignored if the 'sqlite' database is used.
 database_user: webworkWrite
 database_password: password
