Replace most lodash methods with native javascript methods.  For some of them methods are provided in src/utils.ts.  Most are just directly replaced.  Only cloneDeep remains, and this is one of the things lodash does well.  Since we import from lodash-es the resulting contribution of importing cloneDeep to the bundle is small.
Also, the vendor chunk is split into parts.  Basically there is one
chunk for each import from node_modules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"extends": "@quasar/app/tsconfig-preset.json",
 	"compilerOptions": {
-		"baseUrl": "."
+		"baseUrl": ".",
+		"target": "es2020",
+		"lib": ["esnext", "dom", "dom.iterable"]
 	},
 	"exclude": ["dist", ".quasar", "node_modules"]
 }
