Make the npm lint script run on all js, ts, and vue files.  Not just those that are in src.  This fixes things in the build .js files as well as in the tests directory.
Add ts and vue files to the .editorconfig file.

Eslint does not need to ignore the build .js files.  Just add the
/* eslint-env node */ setting.

Add the eslint keyword-spacing, arrow-spacing, and
@typescript-eslint/space-infix-ops rules.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"author": "info@openwebwork.org",
 	"private": true,
 	"scripts": {
-		"lint": "eslint --ext .js,.ts,.vue ./src --fix && stylelint \"./src/**/*.vue\" \"./src/**/*.scss\" --fix",
+		"lint": "eslint --ext .js,.ts,.vue . --fix && stylelint \"./src/**/*.vue\" \"./src/**/*.scss\" --fix",
 		"test": "jest",
 		"serve": "morbo bin/webwork3 & quasar dev",
 		"build": "quasar build"
