--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 max_line_length = 120
 
-[*.{js,json,pm,html,docker}]
+[*.{js,ts,json,pm,html,docker,vue}]
 indent_style = tab
 trim_trailing_whitespace = true
 
