Switch to using perl signatures in all of the lib files.  Note that all sub's should have a signature, even those that take no parameters.  This ensures that methods are called with the correct parameters.
Remove double hashed comments except those for perl critic which is the
only place where double hashed comments should be used.

Full sentence comments should also always be capatilized and properly
punctuated.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,3 +1,7 @@
 severity = 4
 
 [-Subroutines::ProhibitSubroutinePrototypes]
+
+# Allow no warnings usage with a category restriction (for signatures)
+[TestingAndDebugging::ProhibitNoWarnings]
+allow_with_category_restriction = 1
