Remove the webwork3.yml.dist postgres_user setting.  Instead add an option for that to the setup_db.pl script.
Also in the setup_db.pl script switch to a proper check to see that the user
has the needed permissions, and put the check that the user is the
postgres_user back.

--- a/conf/webwork3.dist.yml
+++ b/conf/webwork3.dist.yml
@@ -9,17 +9,13 @@ webwork3_home: .
 database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # For mysql or mariadb
 #database_dsn: dbi:mysql:dbname=webwork3
+# For postgres
+#database_dsn: dbi:Pg:dbname=webwork3;host=localhost
 
-# Database credentials for mysql, or mariadb.
+# Database credentials for mysql, mariadb, or postgres.
 # These are ignored if the 'sqlite' database is used.
 database_user: webworkWrite
 database_password: password
-
-# Settings for Postgres
-# database_dsn: dbi:Pg:dbname=webwork3;host=localhost
-# If the postgres user is not postgres, assign the user here.
-# postgres_user: user
-
 
 # URL for the Problem Library (OPLv3)
 opl_url: http:/localhost:3030
