Fix permissions and require authentication for api routes
Remove the ignore_permissions option and use permissions in unit test.
The permissions are fixed so that they actually work.

Also require authentication to access all api routes except the login
and logout routes.

Fix the cookie settings in the conf file.  The samesite setting does not
need the quotes, and the secure setting needs to be a numeric 0 or 1.
The string true did work because that is truthy in perl.  However, it is
misleading because the string false is also truthy.

--- a/conf/webwork3.dist.yml
+++ b/conf/webwork3.dist.yml
@@ -21,8 +21,8 @@ database_password: password
 opl_url: http:/localhost:3030
 
 # Cookie control settings
-cookie_samesite: "None"
-cookie_secure: true
+cookie_samesite: None
+cookie_secure: 1
 cookie_lifetime: 3600
 
 # Production server configuration
