--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.vue . --fix && stylelint \"./src/**/*.vue\" \"./src/**/*.scss\" --fix",
 		"test": "jest --testPathPattern='tests/unit-tests'",
-		"test-stores": "jest --runInBand --testPathPattern='tests/stores'",
+		"test-stores": "./bin/test_pinia_stores",
 		"serve": "morbo bin/webwork3 & quasar dev",
 		"build": "quasar build",
 		"perltidy": "bash perltidy --pro=./.perltidyrc -b -bext='/' ./**/*.{t,pl,pm}"
