WIP: switching route permission to using under from mojolicious

--- a/conf/permissions.dist.yml
+++ b/conf/permissions.dist.yml
@@ -29,6 +29,8 @@ db_permissions:
       authenticated: true
     getUIRoutePermissions:
       authenticated: true
+    checkPermission:
+      authenticated: true
 
   Course:
     getCourses:
